# cortex

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  Report 30.03.2026.md  mcp_server.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: ci.yml
Prompts/: P1-frontend.md  P2-frontend.md  comed-something.md  cortex-cli-fix-prompt.md  final-polish.md  prompt.md  read-me-cortex.md  ui:ux.md
backend/: config.py  main.py  models.py
backend/llm/: __init__.py  anthropic_client.py  base.py  client.py  openai_compat_client.py  router.py
backend/pipeline/: gap_detector.py  gatherer.py  memory.py  orchestrator.py  planner.py  synthesizer.py  verifier.py
backend/search/: brave.py  scraper.py  serper.py  tavily.py
benchmarks/: README.md  metrics.py  queries.py  report.py  runner.py
cli/: __main__.py  connection.py  cortex_cli.py  output.py  progress.py  renderer.py  theme.py
docker/: docker-compose.dynamo-local.yml  setup-local-gpu.md
docs/: evaluation.md  retrospective.md
dynamo/: README.md  config.py  kv_cache_router.py  mock_client.py  real_client.py  triton_embeddings.py  worker_types.py
evals/: README.md  judge.py  pacing.py  routing_ablation.py  verifier_ablation.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: build_corpus.py  local_smoke.py
tests/: conftest.py  test_benchmark_parser.py  test_chunking.py  test_dedupe.py  test_gap_detector.py  test_openai_compat_retry.py  test_orchestrator.py  test_parse_json.py  test_router.py  test_tavily_optional.py  test_verifier.py
(+213 files in other folders)
